--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://vinaykumarv803.github.io/EMart-React",
+  "homepage": "https://vinaykumarv803.github.io/EMart",
   "name": "e-mart",
   "version": "0.1.0",
   "private": true,
